[package]
name = "bevy_openxr"
version = "0.1.0"
edition = "2021"

[features]
default = ["linked"]
linked = ["openxr/linked", "openxr/static"]

[dependencies]
anyhow = "1.0.75"
ash = "0.37.3"
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "multi-threaded",
    "ktx2",
    "zstd",
    "bevy_gizmos",
    "tonemapping_luts",
] }
openxr = { version = "0.17.1", features = ["mint"] }
mint = "0.5.9"
wgpu = "0.17.1"
wgpu-core = { version = "0.17.1", features = ["vulkan"] }
wgpu-hal = "0.17.1"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
color-eyre = "0.6.2"

[[example]]
name = "xr"
path = "examples/xr.rs"

[profile.release]
debug = true
